--- a/Selecao/Selecao-Web/src/main/resources/templates/_entrevistados.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_entrevistados.html
@@ -4,10 +4,10 @@
         <select class="form-control" id="txtStatus" name="status">
             <option value="" class="optionDisable">Status:</option>
             <option value="ENTREVISTADO">Entrevistado</option>
-            <option value="EM_ANALISE">Em análise</option>
-            <option value="PRE_SELECIONADO">Pre selecionado</option>
+            <option value="EM_ANALISE">Em Análise</option>
+            <option value="PRE_SELECIONADO">Pré-selecionado</option>
             <option value="SELECIONADO">Selecionado</option>
-            <option value="NAO_SELECIONADO">Nao selecionado</option>
+            <option value="NAO_SELECIONADO">Nao Selecionado</option>
         </select>
     </div>
     <div class="input-group col-xs-12 col-sm-1 col-md-1">
@@ -34,8 +34,6 @@
                 <td th:text="${entrevista.provaAc}"></td>
                 <td th:text="${entrevista.provaTecnica}"></td>
                 <td><a th:attr="data-idcandidato=${entrevista.idCandidato.idCandidato}" class="btn btn-primary btnExibirParecer">Exibir</a></td>
-<!--                <td th:text="${entrevista.parecerRh}"></td>
-                <td th:text="${entrevista.parecerTecnico}"></td>-->
                 <td th:text="${entrevista.idCandidato.status}"></td>
             </tr> 
         </tbody>
