--- a/Selecao/Selecao-Web/src/main/resources/templates/_adm-home.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_adm-home.html
@@ -3,28 +3,28 @@
         <div class="wizard-inner panel-heading">
             <div class="connecting-line"></div>
             <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" th:class="${counts[0] > 0 and counts[1] == 0 and counts[2] == 0 and counts[3] == 0}? 'active' : ''">
+                <li role="presentation" th:class="${counts[0] > 0 and counts[1] == 0 and counts[2] == 0 and counts[3] == 0}? 'active selec' : ''">
                     <a href="#step1" data-toggle="tab" aria-controls="step1" role="tab" title="Inscrições">
                         <span class="round-tab">
                             <i class="glyphicon glyphicon-list"></i>
                         </span>
                     </a>
                 </li>
-                <li role="presentation" th:class="${counts[1] > 0 and counts[2] == 0 and counts[3] == 0}? 'active' : ''">
+                <li role="presentation" th:class="${counts[1] > 0 and counts[2] == 0 and counts[3] == 0}? 'active selec' : ''">
                     <a href="#step2" data-toggle="tab" aria-controls="step2" role="tab" title="Provas">
                         <span class="round-tab">
                             <i class="glyphicon glyphicon-pencil"></i>
                         </span>
                     </a>
                 </li>
-                <li role="presentation" th:class="${counts[2] > 0 and counts[3] == 0}? 'active' : ''">
+                <li role="presentation" th:class="${counts[2] > 0 and counts[3] == 0}? 'active selec' : ''">
                     <a href="#step3" data-toggle="tab" aria-controls="step3" role="tab" title="Entrevistas">
                         <span class="round-tab">
                             <i class="glyphicon glyphicon-calendar"></i>
                         </span>
                     </a>
                 </li>
-                <li role="presentation" th:class="${counts[3] > 0}? 'active' : ''">
+                <li role="presentation" th:class="${counts[3] > 0}? 'active selec' : ''">
                     <a href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="Selecionados">
                         <span class="round-tab">
                             <i class="glyphicon glyphicon-ok"></i>
