refactor(Titulo): alterar titulos dos arquivos html.

--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" th:href="@{/css/candidato.css}"/>
         <link rel="stylesheet" th:href="@{/css/administrador-home.css}"/>
         <link rel="shortcut icon" th:href="@{/img/favicon.ico}"/>
-        <title>Titulo do Projeto</title>
+        <title>Projeto Crescer</title>
 
 
     </head>
