--- a/Selecao/Selecao-Web/src/main/resources/templates/index.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" th:href="@{/css/client-side.css}"/>
         <link rel="stylesheet" th:href="@{/css/administrador-home.css}"/>
         <link rel="shortcut icon" th:href="@{/img/favicon.ico}"/>
-        <title>Titulo do Projeto</title>
+        <title>Projeto Crescer</title>
     </head>
     <body class="corpo">
         <div class="container col-md-offset-1 col-md-10 ">
