--- a/Selecao/Selecao-Web/src/main/resources/templates/Login.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Login.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
         <link rel="stylesheet" th:href="@{/css/login.css}"/>
         <link rel="shortcut icon" th:href="@{/img/favicon.ico}"/>
-        <title>Titulo do Projeto</title>
+        <title>Projeto Crescer</title>
     </head>
     <body class="background-cinza">
         <div class="container">
