--- a/Selecao/Selecao-Web/src/main/resources/templates/Sucesso.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Sucesso.html
@@ -11,21 +11,23 @@
     <body class="corpo">
         <div class="container col-md-offset-2 col-md-8 ">
             <div class="row">
-                <div class="text-center">
-                    <h1 class="text-center titulo">Sucesso</h1>
+                <div class="margin-cima text-center">
+                    <img class="img-success" src="http://www.energyauditpeople.com/images/success-check-icon.png"/>                 
                 </div>
             </div>
-            
-            <div th:if="${mensagemFormCadastro}">
-                <h3 class="text-center" th:text="${mensagemFormCadastro}"></h3>
-            </div>
-            <div th:if="${mensagemConfirmacaoEmail}">
-                <h3 class="text-center" th:text="${mensagemConfirmacaoEmail}"></h3>
-            </div>
-            <div th:if="${mensagemSucessoInscricao}">
-                <h3 class="text-center" th:text="${mensagemSucessoInscricao}"></h3>
-            </div>   
 
+            <div>
+                <h1 class="text-center titulo">Sucesso</h1>
+                <div th:if="${mensagemFormCadastro}">
+                    <h3 class="text-center" th:text="${mensagemFormCadastro}"></h3>
+                </div>
+                <div th:if="${mensagemConfirmacaoEmail}">
+                    <h3 class="text-center" th:text="${mensagemConfirmacaoEmail}"></h3>
+                </div>
+                <div th:if="${mensagemSucessoInscricao}">
+                    <h3 class="text-center" th:text="${mensagemSucessoInscricao}"></h3>
+                </div>   
+            </div>
         </div>
         <script th:src="@{/js/jquery-2.2.4.min.js}" type="text/javascript"></script>
         <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
