--- a/Selecao/Selecao-Web/src/main/resources/templates/_entrevistas.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_entrevistas.html
@@ -12,49 +12,49 @@
         <div class="tab-content">
             <div id="home" class="tab-pane fade in active">
                 <h3>Informações do Candidato</h3>
-                <form id="edicao-candidato" data-url="/editar-candidato" role="form"  method="POST">
+                <form id="edicao-candidato" data-url="/rest/candidato/post" role="form"  method="POST">
                     <input type="number" hidden="hidden" th:value="${candidato.idCandidato.idCandidato}" name="idCandidato" />
                     <input type="number" hidden="hidden" th:value="${candidato.idInformacao}" name="idInformacao" />
                     <div class="input-group">
                         <span for="nome" class="input-group-addon" id="basic-addon1">Nome</span>
-                        <input type="text" class="form-control input-data" th:value="${candidato.idCandidato.nome}" placeholder="fulano" name="nome" required="required" aria-describedby="basic-addon1"/>
+                        <input type="text" class="form-control input-data" th:value="${candidato.idCandidato.nome}" placeholder="fulano" name="nome" aria-describedby="basic-addon1"/>
                     </div>
                     <div class="input-group">
                         <span for="email" class="input-group-addon" id="basic-addon2">Email:</span>
-                        <input type="text" class="form-control input-data" th:value="${candidato.idCandidato.email}" placeholder="fulano@exemplo.com" name="email" required="required" aria-describedby="basic-addon2"/>
+                        <input type="text" class="form-control input-data" th:value="${candidato.idCandidato.email}" placeholder="fulano@exemplo.com" name="email"  aria-describedby="basic-addon2"/>
                     </div>
                     <div class="input-group">
                         <span for="instituicaoEnsino" class="input-group-addon" id="basic-addon3">Instituição de ensino:</span>
-                        <input type="text" class="form-control input-data" th:value="${candidato.idCandidato.instituicaoEnsino}" placeholder="Unisinos" name="instituicaoEnsino" required="required" aria-describedby="basic-addon3"/>
+                        <input type="text" class="form-control input-data" th:value="${candidato.idCandidato.instituicaoEnsino}" placeholder="Unisinos" name="instituicaoEnsino" aria-describedby="basic-addon3"/>
                     </div>
                     <div class="input-group">
                         <span for="curso" class="input-group-addon" id="basic-addon4">Curso:</span>
-                        <input type="text" class="form-control input-data" th:value="${candidato.idCandidato.curso}" placeholder="Ciência da computação" name="curso" required="required" aria-describedby="basic-addon4"/>
+                        <input type="text" class="form-control input-data" th:value="${candidato.idCandidato.curso}" placeholder="Ciência da computação" name="curso"  aria-describedby="basic-addon4"/>
                     </div>
                     <div class="input-group">
                         <span for="previsaoFormatura" class="input-group-addon" id="basic-addon5">Previsão de formatura:</span>
-                        <input type="text" class="form-control input-data" th:value="${candidato.idCandidato.previsaoFormatura}" placeholder="2018/01" name="previsaoFormatura" required="required" aria-describedby="basic-addon5"/>
+                        <input type="text" class="form-control input-data" th:value="${candidato.idCandidato.previsaoFormatura}" placeholder="2018/01" name="previsaoFormatura" aria-describedby="basic-addon5"/>
                     </div>
                     <div class="input-group">
                         <span for="telefone" class="input-group-addon" id="basic-addon6">Telefone:</span>
-                        <input type="text" class="form-control input-data" th:value="${candidato.telefone}" placeholder="(51)99999999" name="telefone" required="required" aria-describedby="basic-addon6"/>
+                        <input type="text" class="form-control input-data" th:value="${candidato.telefone}" placeholder="(51)99999999" name="telefone"  aria-describedby="basic-addon6"/>
                     </div>
                     <div class="input-group">
                         <span for="dataNascimento" class="input-group-addon" id="basic-addon7">Data de nascimento:</span>
-                        <input type="text" class="form-control input-data" th:value="(${#dates.format(candidato.dataNascimento, 'dd/MM/yyyy')})" placeholder="dd/mm/aaaa" name="dataNascimento" required="required" aria-describedby="basic-addon7"/>
+                        <input type="text" class="form-control input-data" th:value="(${#dates.format(candidato.dataNascimento, 'dd/MM/yyyy')})" placeholder="dd/mm/aaaa" name="dataNascimento"  aria-describedby="basic-addon7"/>
                     </div>
                     <div class="input-group">
                         <span for="cidade" class="input-group-addon" id="basic-addon8">Cidade</span>
-                        <input type="text" class="form-control input-data" th:value="${candidato.cidade}" placeholder="São Leopoldo" name="cidade" required="required" aria-describedby="basic-addon8"/>
+                        <input type="text" class="form-control input-data" th:value="${candidato.cidade}" placeholder="São Leopoldo" name="cidade"  aria-describedby="basic-addon8"/>
                     </div>
                     <div class="input-group">
                         <span for="urlLinkedin" class="input-group-addon" id="basic-addon9">Url Linkedin:</span>
-                        <input type="text" class="form-control input-data" th:value="${candidato.urlLinkedin}" placeholder="www.linkedin.com/fulano" name="urlLinkedin" required="required" aria-describedby="basic-addon9"/>
+                        <input type="text" class="form-control input-data" th:value="${candidato.urlLinkedin}" placeholder="www.linkedin.com/fulano" name="urlLinkedin"  aria-describedby="basic-addon9"/>
                     </div>                    
                     <div class="input-group">
                         <span for="status" class="input-group-addon" id="basic-addon10">Status:</span>
                         <select class="form-control input-data" th:value="${candidato.idCandidato.status}" name="status">
-                            <option   th:each="status : ${T(br.com.crescer.selecao.entities.enums.StatusCandidato).values()}" th:value="${status}" th:text="${#strings.replace(status, '_', ' ')}"></option>
+                            <option    th:each="status : ${T(br.com.crescer.selecao.entities.enums.StatusCandidato).values()}" th:value="${status}" th:text="${#strings.replace(status, '_', ' ')}" th:selected="${candidato.idCandidato.status == status}"></option>
                         </select>                       
                     </div>
                     <button type="submit" class="btn btn-default">Salvar</button>
@@ -62,12 +62,13 @@
             </div>
             
             <div class="tab-pane fade" id="menu">
-                <form role="form" id="edicao-entrevista" data-url="/editar-entrevista" method="POST">
+                <form role="form" id="edicao-entrevista" data-url="/rest/entrevista/post" method="POST">
+                    <input type="number" hidden="hidden" th:value="${entrevista.idEntrevista}" name="idEntrevista" />
                     <div class="input-group">
                         <span for="status" class="input-group-addon" id="basic-addon10">Grupo de Prova:</span>
-                        <select class="form-control input-data" th:value="${entrevista.idGrupoDeProvas}" name="idGrupoDeProvas">
-                            <option>Sem grupo ainda</option>
-                            <option   th:each="grupos : ${GruposDeProvas}" th:value="${grupos.idGrupoDeProvas}" th:text="${grupos.idDataHora.titulo+' | '+#dates.format(grupos.idDataHora.dataHoraInicial,'dd/MM - HH:mm')+' ás '+#dates.format(grupos.idDataHora.dataHoraFinal,'HH:mm')} "></option>
+                        <select class="form-control input-data"  name="idGrupoDeProvas">
+                            <option value = ''>Sem grupo ainda</option>
+                            <option  th:each="grupos : ${GruposDeProvas}" th:value="${grupos.idGrupoDeProvas}" th:text="${grupos.idDataHora.titulo+' | '+#dates.format(grupos.idDataHora.dataHoraInicial,'dd/MM - HH:mm')+' ás '+#dates.format(grupos.idDataHora.dataHoraFinal,'HH:mm')} " th:selected="${entrevista.idGrupoDeProvas != null and   entrevista.idGrupoDeProvas.idGrupoDeProvas == grupos.idGrupoDeProvas}"></option>
                         </select>                       
                     </div>
                     <div class="input-group">
@@ -76,21 +77,21 @@
                     </div>
                     <div class="form-group">
                         <h4>Parecer Rh:</h4>
-                        <textarea rows="3" class="form-control" th:text="${entrevista.parecerRh}"></textarea>
+                        <textarea rows="3" name="pareceRh" class="form-control" th:text="${entrevista.parecerRh}"></textarea>
                     </div>
                     <div class="form-group">
                         <h4>Parecer tecnico:</h4>
-                        <textarea rows="3" class="form-control" th:text="${entrevista.parecerTecnico}"></textarea>
+                        <textarea rows="3" name="pareceTecnico" class="form-control" th:text="${entrevista.parecerTecnico}"></textarea>
                     </div>
                     <div class="form-group">
                         <h4>Notas das provas:</h4>             
                         <ul class="list-inline">
                             <li class="h5">G36:</li>
-                            <li><input class="form-control" th:value="${entrevista.provaG36}" type="number" step="0.1" width="48"/></li>
+                            <li><input class="form-control" name="provaG36" th:value="${entrevista.provaG36}" type="number" step="0.1" width="48"/></li>
                             <li class="h5">AC:</li>
-                            <li><input class="form-control" th:value="${entrevista.provaAc}" type="number" step="0.1" width="48"/></li>
+                            <li><input class="form-control" name="provaAc" th:value="${entrevista.provaAc}" type="number" step="0.1" width="48"/></li>
                             <li class="h5">Técnica:</li>
-                            <li><input class="form-control" th:value="${entrevista.provaTecnica}" type="number" step="0.1" width="48"/></li>
+                            <li><input class="form-control" name="provaTecnica" th:value="${entrevista.provaTecnica}" type="number" step="0.1" width="48"/></li>
                         </ul>
                     </div>
                     <p th:if="${entrevista.idUsuario}"  class="text-center"><strong>Usuario:</strong><mark><span th:text="${entrevista.idUsuario.nome}"></span></mark></p>
