--- a/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:replace="fragments :: head">  
-        <title>Titulo do Projeto</title>
+        <title>CrescerInscrições</title>
     </head>
     <body class="body-admin">
         <div id="wrapper">
