--- a/Selecao/Selecao-Web/src/main/resources/static/css/administrador-home.css
+++ b/Selecao/Selecao-Web/src/main/resources/static/css/administrador-home.css
@@ -1,156 +1,172 @@
-section:first-child{
-    margin-bottom: 40px;
+section:first-child {
+margin-bottom:40px
 }
 
 .wizard {
-    margin: 0px auto;
-    background: transparent;
+background:transparent;
+margin:0 auto
 }
 
-    .wizard .nav-tabs {
-        position: relative;
-        margin-bottom: 0;
-        border-bottom-color: #fbb041;
-    }
+.wizard .nav-tabs {
+position:relative;
+margin-bottom:0;
+border-bottom-color:#fbb041
+}
 
-    .wizard > div.wizard-inner {
-        position: relative;
-    }
+.wizard > div.wizard-inner {
+position:relative
+}
 
 .connecting-line {
-    height: 2px;
-    background: #e0e0e0;
-    position: absolute;
-    width: 80%;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    top: 50%;
-    z-index: 1;
+height:2px;
+background:#e0e0e0;
+position:absolute;
+width:80%;
+left:0;
+right:0;
+top:50%;
+z-index:1;
+margin:0 auto
 }
 
-.wizard .nav-tabs > li.active > a, .wizard .nav-tabs > li.active > a:hover, .wizard .nav-tabs > li.active > a:focus {
-    color: #555555;
-    cursor: default;
-    border: 0;
-    border-bottom-color: transparent;
+.wizard .nav-tabs > li.active > a {
+color:#555;
+cursor:default;
+border:0;
+border-bottom-color:transparent
+}
+
+.wizard .nav-tabs > li.active > a:hover {
+color:#555;
+cursor:default;
+border:0;
+border-bottom-color:transparent
+}
+
+.wizard .nav-tabs > li.active > a:focus {
+color:#555;
+cursor:default;
+border:0;
+border-bottom-color:transparent
 }
 
 span.round-tab {
-    width: 70px;
-    height: 70px;
-    line-height: 70px;
-    display: inline-block;
-    border-radius: 100px;
-    background: #fff;
-    border: 2px solid #e0e0e0;
-    z-index: 2;
-    position: absolute;
-    left: 0;
-    text-align: center;
-    font-size: 25px;
+width:70px;
+height:70px;
+line-height:70px;
+display:inline-block;
+border-radius:100px;
+background:#fff;
+border:2px solid #e0e0e0;
+z-index:2;
+position:absolute;
+left:0;
+text-align:center;
+font-size:25px
 }
-span.round-tab i{
-    color:#32363f;
+
+span.round-tab i {
+color:#32363f
 }
+
 .wizard li.active span.round-tab {
-    background: #fff;
-    border: 2px solid #fbb041;
-    
+background:#fff;
+border:2px solid #fbb041
 }
-.wizard li.active span.round-tab i{
-    color: #32363f;
+
+.wizard li.active span.round-tab i {
+color:#32363f
 }
 
 span.round-tab:hover {
-    color: #FBB041;
-    border: 2px solid #fbb041;
+color:#FBB041;
+border:2px solid #fbb041
 }
 
 .wizard .nav-tabs > li {
-    width: 25%;
+width:25%
 }
 
 .wizard li:after {
-    content: " ";
-    position: absolute;
-    left: 46%;
-    opacity: 0;
-    margin: 0 auto;
-    bottom: 0px;
-    border: 5px solid transparent;
-    border-bottom-color: #fbb041;
-    transition: 0.1s ease-in-out;
+content:" ";
+position:absolute;
+left:46%;
+opacity:0;
+bottom:0;
+border:5px solid transparent;
+border-bottom-color:#fbb041;
+transition:.1s ease-in-out;
+margin:0 auto
 }
 
 .wizard li.active:after {
-    content: " ";
-    position: absolute;
-    left: 46%;
-    opacity: 1;
-    margin: 0 auto;
-    bottom: 0px;
-    border: 10px solid transparent;
-    border-bottom-color: #fbb041;
+content:" ";
+position:absolute;
+left:46%;
+opacity:1;
+bottom:0;
+border:10px solid transparent;
+border-bottom-color:#fbb041;
+margin:0 auto
 }
 
 .wizard .nav-tabs > li a {
-    width: 70px;
-    height: 70px;
-    margin: 20px auto;
-    border-radius: 100%;
-    padding: 0;
+width:70px;
+height:70px;
+border-radius:100%;
+margin:20px auto;
+padding:0
 }
 
-    .wizard .nav-tabs > li a:hover {
-        background: transparent;
-    }
+.wizard .nav-tabs > li a:hover {
+background:transparent
+}
 
 .wizard .tab-pane {
-    position: relative;
-    padding-top: 10px;
+position:relative;
+padding-top:10px
 }
 
 .wizard h3 {
-    margin-top: 0;
+margin-top:0
 }
 
-.panel-heading{
-    padding-bottom: 0px;
+.panel-heading {
+padding-bottom:0
 }
 
-.panel-body{
-    background: #fff;
-    padding: 15px 25px;
-    text-align: center;
+.panel-body {
+background:#fff;
+text-align:center;
+padding:15px 25px
+}
+
+.selec a span {
+background-color:#FBB041!important
 }
 
 @media( max-width : 585px ) {
-
-    .wizard {
-        width: 90%;
-        height: auto !important;
-    }
-
-    span.round-tab {
-        font-size: 16px;
-        width: 50px;
-        height: 50px;
-        line-height: 50px;
-    }
-
-    .wizard .nav-tabs > li a {
-        width: 50px;
-        height: 50px;
-        line-height: 50px;
-    }
-
-    .wizard li.active:after {
-        content: " ";
-        position: absolute;
-        left: 35%;
-    }
+.wizard {
+width:90%;
+height:auto!important
 }
-.selec a span{
-    background-color:#FBB041 !important;
+
+span.round-tab {
+font-size:16px;
+width:50px;
+height:50px;
+line-height:50px
+}
+
+.wizard .nav-tabs > li a {
+width:50px;
+height:50px;
+line-height:50px
+}
+
+.wizard li.active:after {
+content:" ";
+position:absolute;
+left:35%
+}
 }
