--- a/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
@@ -18,15 +18,15 @@
             </div> 
         </div>        
 
-        <script th:src="@{/js/jquery-2.2.4.min.js}" type="text/javascript"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js" type="text/javascript"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+        <script th:src="@{/js/min/boostrap_jquery.min.js}" type="text/javascript"></script>
+        <script th:src="@{/js/min/admin.min.js}" type="text/javascript"></script>
+<!--        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.8.0/fullcalendar.min.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.8.0/lang/pt-br.js" type="text/javascript"></script>
         <script src="https://cdn.jsdelivr.net/sweetalert2/4.0.6/sweetalert2.min.js" type="text/javascript"></script>  
         <script th:src="@{/js/autoComplete.js}" type="text/javascript"></script>
         <script th:src="@{/js/mainView.js}" type="text/javascript"></script>
         <script th:src="@{/js/calendarioView.js}" type="text/javascript"></script>
-        <script th:src="@{/js/script.js}" type="text/javascript"></script>
+        <script th:src="@{/js/script.js}" type="text/javascript"></script>-->
     </body>
 </html>
