--- a/Selecao/Selecao-Web/src/main/resources/templates/Login.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Login.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>    
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-        <link rel="stylesheet" th:href="@{/css/login.css}"/>
+        <link rel="stylesheet" th:href="@{/css/min/custom.min.css}"/>        
         <link rel="shortcut icon" th:href="@{/img/favicon.ico}"/>
         <title>Projeto Crescer</title>
     </head>
-    <body class="background-cinza">
+    <body class="background-cinza login">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 content-wrapper">
@@ -37,7 +36,6 @@
                 </div>
             </div>
         </div>
-        <script th:src="@{/js/jquery-2.2.4.min.js}" type="text/javascript"></script>
-        <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
+        <script th:src="@{/js/boostrap_jquery.min}" type="text/javascript"></script>
     </body>
 </html>
