--- a/Selecao/Selecao-Web/src/main/resources/templates/Sucesso.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Sucesso.html
@@ -29,8 +29,6 @@
                 </div>   
             </div>
         </div>
-        <script th:src="@{/js/jquery-2.2.4.min.js}" type="text/javascript"></script>
-        <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
-        <script th:src="@{/js/script.js}" type="text/javascript"></script>
+        <script th:src="@{/js/boostrap_jquery.min.js}" type="text/javascript"></script>
     </body>
 </html>
